# infra-updater

./: Dockerfile  main.py  pyproject.toml  settings.py  update_infra.py
.github/workflows/: docker-ci.yml
